--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </li>
             
             <li class="nav-item">
-              <a class="nav-link" href="#">Admin</a>
+              <a class="nav-link" href="./admin/view/admin.html">Admin</a>
             </li>
           </ul>
         </div>
