--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
       <aside id="sidebar-cart">
         <main>
           <a href="#" class="close-button"><span class="close-icon">X</span></a>
-          <h2>Shopping Bag <span class="count">3</span></h2>
+          <h2>Shopping Bag <span id="countCart" class="count"></span></h2>
           <ul class="products" id="tblCart">
           </ul>
           <div class="totals">
             <div class="subtotal">
-              <span class="label">Subtotal:</span> <span class="amount">$54.00</span>
+              <span class="label">Subtotal:</span><span class="amount">$54.00</span>
             </div>
           </div>
           <div class="action-buttons">
