--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </ul>
           <div class="totals">
             <div class="subtotal">
-              <span class="label">Subtotal:</span><span class="amount">$54.00</span>
+              <span class="label">Subtotal:</span><span id="total" class="amount"></span>
             </div>
           </div>
           <div class="action-buttons">
